@@ -1,4 +1,5 @@
 package Dist::Zilla::Plugin::MetaResources;
+
 # ABSTRACT: provide arbitrary "resources" for distribution metadata
 use Moose;
 with 'Dist::Zilla::Role::MetaProvider';
@@ -8,7 +9,12 @@ with 'Dist::Zilla::Role::MetaProvider';
 This plugin adds resources entries to the distribution's metadata.
 
   [MetaResources]
-  homepage = http://example.com/~dude/project.asp
+  homepage          = http://example.com/~dude/project.asp
+  bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Project
+  bugtracker.mailto = bug-project@rt.cpan.org
+  repository.url    = git://github.com/dude/project.git
+  repository.web    = http://github.com/dude/project
+  repository.type   = git
 
 =cut
 
@@ -20,16 +26,33 @@ has resources => (
 
 sub BUILDARGS {
   my ($class, @arg) = @_;
-  my %copy = ref $arg[0] ? %{$arg[0]} : @arg;
+  my %copy = ref $arg[0] ? %{ $arg[0] } : @arg;
 
   my $zilla = delete $copy{zilla};
   my $name  = delete $copy{plugin_name};
 
+  if (exists $copy{bugtracker}) {
+    my $tracker = delete $copy{bugtracker};
+    $copy{bugtracker}{web} = $tracker;
+  }
+
+  if (exists $copy{repository}) {
+    my $repo = delete $copy{repository};
+    $copy{repository}{url} = $repo;
+  }
+
+  for my $multi (qw( bugtracker repository )) {
+    for my $key (grep { /^\Q$multi\E\./ } keys %copy) {
+      my $subkey = (split /\./, $key, 2)[1];
+      $copy{$multi}{$subkey} = delete $copy{$key};
+    }
+  }
+
   return {
-    zilla => $zilla,
+    zilla       => $zilla,
     plugin_name => $name,
     resources   => \%copy,
-  }
+  };
 }
 
 sub metadata {
